dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,13 +96,13 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(20.019% 0.00002 271.152);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: #2AC5C1;
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
